--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
     <div class="xd">3</div>
     <div class="xd">4</div>
 
+    <div id="nazwa">
+        <p id="pe1">jeden</p>
+        <p id="pe2">dwa</p>
+        <p id="pe3">trzy</p>
+    </div>
+    <div class="nazwa"></div>
+
+    <div class="xd" id="maciek" maciek="niewiemCo">1</div>
+    <div class="xd" id="maciek2">2</div>
+    <div class="xd">3</div>
+    <div class="xd">4</div>
+
+
 </body>
 <script src="zad.js"></script>
 </html>
